atlas/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: axiom-system
  labels:
    name: axiom-system
    app: axiom
